10. Terraform/Day01/05.tf
#Count of VMs

provider "aws" {
  region = "ap-south-1"
}

resource "aws_instance" "first-vm" {
  ami           = "ami-09ed39e30153c3bf9"
  instance_type = "t2.micro"
  count = 3

  tags = {
    Name = "terraform-resource"
  }
}
